--- a/20160204_DataAnalyticsForCities/index.html
+++ b/20160204_DataAnalyticsForCities/index.html
@@ -21,8 +21,8 @@ class:center,middle
 ##From Analysis to Action
 - - - 
 ##Richard Dunks
-![img-center-small](../images/datapolitan.png)
-###Follow along at: http://bit.ly/GovEx-DataAnalysis
+![img-center-40](../images/datapolitan.png)
+###Follow along at: http://labs.centerforgov.org/Analytics-Training/20160204_DataAnalyticsForCities
 
 ---
 
