--- a/20160523_SIA/index.html
+++ b/20160523_SIA/index.html
@@ -17,24 +17,24 @@ layout:true
 ---
 
 class:center,middle
-#The Problems of City Managers
+# The Problems of City Managers
 
 - - - 
 
-##Richard Dunks
-###Follow along at: http://bit.ly/GovEx-SIA
+## Richard Dunks
+### Follow along at: <br>http://labs.centerforgov.org/Analytics-Training/20160523_SIA
 
 ![img-center-40](../images/datapolitan.png)
 
 ---
 
-#Introductions 
+# Introductions 
 + Your name
 + What cities you work with
 
 ---
 
-#Goals
+# Goals
 --
 
 + Have a relaxed, informal discussion on what city managers face
@@ -47,7 +47,7 @@ class:center,middle
 
 ---
 
-#Outcomes
+# Outcomes
 --
 
 + We know more about the work of city managers
@@ -57,7 +57,7 @@ class:center,middle
 
 ---
 
-#Biases
+# Biases
 --
 
 + I'm NYC centric
@@ -67,7 +67,7 @@ class:center,middle
 
 ---
 
-#Technical: External
+# Technical: External
 --
 
 + Don't know what they don't know
@@ -86,7 +86,7 @@ class:center,middle
 
 ---
 
-#Technical: Internal
+# Technical: Internal
 --
 
 + Hard to get resources
@@ -99,7 +99,7 @@ class:center,middle
 
 ---
 
-#Legal
+# Legal
 --
 
 + Easier/safer to say no
@@ -122,13 +122,13 @@ class:center,middle
 
 ---
 
-#Cultural
+# Cultural
 --
 
 + Uncreative, unimaginative co-workers/employees
 ---
 
-#Cultural
+# Cultural
 [![img-right-25](http://imgs.xkcd.com/comics/move_fast_and_break_things.png)](https://xkcd.com/1428/)
 + Innate conservatism of government (can't move fast and break things)
 
@@ -136,12 +136,12 @@ class:center,middle
 https://xkcd.com/1428/
 ---
 
-#To be fair, neither does Facebook
+# To be fair, neither does Facebook
 [![img-center-60](../images/facebook_motto.png)](http://mashable.com/2014/04/30/facebooks-new-mantra-move-fast-with-stability/)
 
 ---
 
-#Political
+# Political
 --
 
 + Personalities (inter- and intra-departmental)
@@ -151,7 +151,7 @@ https://xkcd.com/1428/
 
 ---
 
-#Types of Analysis You Should Know
+# Types of Analysis You Should Know
 --
 
 + Sorting and filtering
@@ -170,7 +170,7 @@ https://xkcd.com/1428/
 
 ---
 
-#Final Thoughts
+# Final Thoughts
 --
 
 + Try not to oversell the capabilities of data and analytics
@@ -184,14 +184,14 @@ https://xkcd.com/1428/
 ---
 
 class:center,middle
-#Any questions?
+# Any questions?
 ![img-center-35](http://imgs.xkcd.com/comics/tasks.png)
 
 http://xkcd.com/1425/
 
 ---
 
-#Thank You
+# Thank You
 + [richard@datapolitan.com](mailto:richard@datapolitan.com)
 + http://blog.datapolitan.com
 + [@rdunks1](https://twitter.com/rdunks1)/[@datapolitan](https://twitter.com/Datapolitan)
