adding govex link

--- a/20170214_mapping_sql/index.html
+++ b/20170214_mapping_sql/index.html
@@ -24,8 +24,7 @@ class:center,middle
 - - - 
 
 ## Richard Dunks
-### Follow along at: http://bit.ly/govex-mapping-sql
-### Code available at: http://bit.ly/govex-mapping-sql-code
+### Follow along at: <br>http://labs.centerforgov.org/Analytics-Training/20170214_mapping_sql
 
 ### [Day 2](#day2)
 
