adding govex links

--- a/20160920_GovEx_AWS/index.html
+++ b/20160920_GovEx_AWS/index.html
@@ -22,7 +22,7 @@ class:center,middle
 - - - 
 
 ## Richard Dunks
-### Follow along at: http://bit.ly/govex-aws
+### Follow along at: <br>http://labs.centerforgov.org/Analytics-Training/20160920_GovEx_AWS
 
 ![img-center-40](../images/datapolitan.png)
 
